--- a/public/templates/modals/login.html
+++ b/public/templates/modals/login.html
@@ -2,7 +2,7 @@
   <md-toolbar>
       <div class="md-toolbar-tools">
           <span flex></span>
-              <h2>Register</h2>
+              <h2>Login</h2>
           <span flex></span>
           <md-button class="md-icon-button" ng-click="cancel()">&times;</md-button>
       </div>
