--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>coder-camps-js</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<base href="/" />
+	<meta name="fragment" content="!" />
 
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/site.css">
