--- a/views/index.html
+++ b/views/index.html
@@ -77,14 +77,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-animate.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-aria.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.2/angular-material.min.js"></script>
-	<script src="/javascript/app.js"></script>
-	<script src="/javascript/services/HomeFactory.js"></script>
-	<script src="/javascript/services/UserFactory.js"></script>
-	<script src="/javascript/services/CommentFactory.js"></script>
-	<script src="/javascript/controllers/GlobalController.js"></script>
-	<script src="/javascript/controllers/HomeController.js"></script>
-	<script src="/javascript/controllers/ProfileController.js"></script>
-	<script src="/javascript/controllers/IconDetailsController.js"></script>
+	<script src="/js/jsBundle.min.js"></script>
 
 </body>
 </html>
