--- a/src/templates/modals/login.html
+++ b/src/templates/modals/login.html
@@ -1,6 +1,7 @@
 <md-dialog style="width:50%; text-align:center !important;" ng-cloak>
   <md-toolbar>
       <div class="md-toolbar-tools">
+          <md-button class="md-icon-button" ng-show="noexist">&times;</md-button>
           <span flex></span>
               <h2>Login</h2>
           <span flex></span>
