--- a/src/templates/modals/login.html
+++ b/src/templates/modals/login.html
@@ -1,30 +1,31 @@
 <md-dialog style="width:50%; text-align:center !important;" ng-cloak>
   <md-toolbar>
-      <div class="md-toolbar-tools">
-          <md-button class="md-icon-button" ng-show="noexist">&times;</md-button>
-          <span flex></span>
-              <h2>Login</h2>
-          <span flex></span>
-          <md-button class="md-icon-button" ng-click="cancel()">&times;</md-button>
+    <div class="md-toolbar-tools" layout>
+      <div layout layout-align="center">
+        <h2>Login</h2>
       </div>
+      <div layout layout-align="end center">
+        <md-button class="md-icon-button" ng-click="cancel()">&times;</md-button>
+      </div>
+    </div>
   </md-toolbar>
   <md-dialog-content>
-      <div class="md-dialog-content">
-          <md-content style="background-color: white !important">
-                  <form ng-submit="reglog()">
-                      <md-input-container>
-                          <label>Email</label>
-                          <input type="email" ng-model="user.email" />
-                      </md-input-container>
-                      <md-input-container>
-                          <label>Password</label>
-                          <input type="password" ng-model="user.password" />
-                      </md-input-container>
-                      <div layout layout-align="center">
-                          <md-button type="submit" class="md-raised md-warn">Submit</md-button>
-                      </div>
-                  </form>
-          </md-content>
-      </div>
+    <div class="md-dialog-content">
+      <md-content style="background-color: white !important">
+        <form ng-submit="reglog()">
+          <md-input-container>
+            <label>Email</label>
+            <input type="email" ng-model="user.email" />
+          </md-input-container>
+          <md-input-container>
+            <label>Password</label>
+            <input type="password" ng-model="user.password" />
+          </md-input-container>
+          <div layout layout-align="center">
+            <md-button type="submit" class="md-raised md-warn">Submit</md-button>
+          </div>
+        </form>
+      </md-content>
+    </div>
   </md-dialog-content>
 </md-dialog>
